testdata/invalid/invalid_union_duplicate_field_number.bop
union U {
    1 -> struct A{}; 
    1 -> struct B{};
}